--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+:root {
+  --color-green-positive: 60, 187, 180;
+  --color-yellow-negative: 249, 173, 29;
+  --color-dark-background: rgba(0, 0, 0, .4);
+  --color-darker-background: rgba(0, 0, 0, .6);
+  --color-darker-gray: rgba(51, 51, 51, 1);
+  --color-dark-gray: rgba(70, 70, 70, 1);
+  --color-light-gray: rgba(235, 235, 235, 1);
+  --color-light-background: rgba(255, 255, 255, .4);
+  --color-lighter-background: rgba(255, 255, 255, .8);
+  --color-white: rgba(255, 255, 255, 1);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body {
+  width: 100%;
+  margin: 0;
+  background-color: var(--color-white);
+  font-family: 'Lato', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  position: relative;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a, a:visited {
+  color: var(--color-white);
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  font-family: 'Lato', sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+hr[role="separator"] {
+  border: 0 none;
+  border-bottom: 2px dotted var(--color-dark-gray);
+  margin: 1.5rem 1rem;
 }
