--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,19 @@ hr[role="separator"] {
   margin: 1.5rem 1rem;
 }
 
+main {
+  padding: 0 1rem;
+  margin-top: 2rem;
+}
+
+main h2,
+main h3,
+main h4 {
+  color: var(--color-dark-gray);
+  font-weight: 300;
+}
+
+main h2 {
+  margin: 0 0 2rem;
+  font-size: 2rem;
+}
