--- a/src/packages/PollCard/css/styles.module.css
+++ b/src/packages/PollCard/css/styles.module.css
@@ -1,3 +1,12 @@
+.featured-card {
+  position: relative;
+  top: 5.5rem;
+  left: 1rem;
+  overflow: hidden;
+  width: 55vw;
+  max-height: 25rem;
+}
+
 .icon-button {
   padding: 0;
   border: 0;
@@ -21,14 +30,13 @@
   background-color: rgba(var(--color-yellow-negative), 1);
 }
 
-.icon-button > img {
+.icon-button>img {
   width: 100%;
   height: 100%;
 }
 
 .featured-card__glass-background {
-  background-color: #4d4d4d;
-  /* position: absolute;
+  position: absolute;
   top: -20%;
   left: -20%;
   width: 140%;
@@ -38,12 +46,11 @@
           var(--color-dark-background),
           var(--color-dark-background)
       ),
-      -25vw 0/160vw no-repeat;
-  filter: blur(1rem); */
+      -25vw 0/160vw;
+  filter: blur(1rem);
 }
 
 .featured-card__content {
-  background: #4d4d4d;
   position: relative;
   padding: 1rem;
   color: var(--color-white);
@@ -84,15 +91,14 @@
   margin: 0 -1rem -1rem;
 }
 
-.featured-card__buttons > .icon-button {
+.featured-card__buttons>.icon-button {
   width: 50%;
   height: 2.75rem;
 }
 
-.featured-card__buttons > .icon-button > img {
+.featured-card__buttons>.icon-button>img {
   max-width: 1.25rem;
 }
-
 
 .featured-card__more-info {
   display: none;
@@ -107,54 +113,60 @@
 
 @media all and (min-width: 768px) {
   .featured-card__glass-background {
-    
-      /* background:
-          center no-repeat linear-gradient(var(--color-dark-background), var(--color-dark-background)),
-          7vw -6.5rem/115vw auto no-repeat; */
+    background:
+      center no-repeat linear-gradient(var(--color-dark-background), var(--color-dark-background)),
+      7vw -6.5rem/115vw auto no-repeat;
   }
 
   .featured-card__content {
-      background: #4d4d4d;
-      padding: 2rem 1.5rem;
+    padding: 2rem 1.5rem;
   }
 
   .featured-card__more-info {
-      display: inline-block;
-      margin: 0;
-      font-weight: 300;
+    display: inline-block;
+    margin: 0;
+    font-weight: 300;
   }
 
   .featured-card__buttons {
-      margin: 0 -1.5rem -2rem;
+    margin: 0 -1.5rem -2rem;
   }
 }
 
 @media all and (min-width: 1100px) {
+  .featured-card {
+    left: 0;
+    width: 50%;
+    min-width: 600px;
+    max-height: unset;
+    margin-top: 2.5rem;
+  }
+
   .featured-card__content {
-      padding: 2rem 1.5rem;
+    padding: 2rem 1.5rem;
   }
 
   .featured-card__desc {
-      max-width: 85%;
-      margin: 2rem 0 1rem;
+    max-width: 85%;
+    margin: 2rem 0 1rem;
   }
 
   .featured-card__cta {
-      margin: 1rem 0 2rem;
-      font-size: 1.5rem;
+    margin: 1rem 0 2rem;
+    font-size: 1.5rem;
   }
 
   .featured-card__buttons {
-      margin: 0 -1.5rem -2rem;
+    margin: 0 -1.5rem -2rem;
   }
 
-  .featured-card__buttons > .icon-button {
-      height: auto;
+  .featured-card__buttons>.icon-button {
+    height: auto;
   }
 
-  .featured-card__buttons > .icon-button > img {
-      max-width: 2rem;
-      height: 2rem;
-      margin: 1.3rem 0;
+  .featured-card__buttons>.icon-button>img {
+    max-width: 2rem;
+    height: 2rem;
+    margin: 1.3rem 0;
   }
 }
