--- a/src/layout/LayoutToggle/css/styles.module.css
+++ b/src/layout/LayoutToggle/css/styles.module.css
@@ -21,7 +21,7 @@
   border: 2px solid black;
   background-color: white;
   padding: 5px;
-  margin: 10px;
+  margin: 10px 0;
   min-width: 120px;
 }
 
